# latychain

./: .gitignore  HISTORY.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: api-reference.md  describe.md  design.1.md  design.3.md  guide.md  impl.md
examples/: README.md  api_routing.py  config_validator.py  html_headings.py  log_classifier.py  mini_commands.py  perm_tables.py
src/latychain/: ChainDotRule.py  __init__.py  _atoms.py  _chain.py  _hook.py
test/: _test_doc_examples.py  _test_doc_sugar.py  _test_sugar.py  _verify_readme_explicit.py  _verify_readme_sugar.py  run_all.py  test_core.py
