[project]
name = "latychain"
version = "0.1.0"
description = "Chain-structured data and pattern matching with .xxx.yyy syntax"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "laty contributors" },
]
keywords = ["chain", "pattern-matching", "dsl", "path"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/latychain"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/test",
    "/docs",
    "/README.md",
    "/pyproject.toml",
]
