[project]
name = "latychain"
version = "0.2.1"
description = "Chain-structured data and pattern matching with .xxx.yyy syntax"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "laty contributors" },
]
keywords = ["chain", "pattern-matching", "dsl", "path"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/fnsii/latychain"
Repository = "https://github.com/fnsii/latychain"
Documentation = "https://github.com/fnsii/latychain#readme"
"Bug Tracker" = "https://github.com/fnsii/latychain/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/latychain"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/test",
    "/docs",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]
test = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["test"]
